--- a/app/templates/client/htmls/test.html
+++ b/app/templates/client/htmls/test.html
@@ -37,9 +37,10 @@
 <script src="../bower_components/PreloadJS/lib/preloadjs-0.6.2.min.js"></script>
 <script src="../bower_components/SoundJS/lib/soundjs-0.6.2.min.js"></script>
 
-<script src="../bower_components/jquery/dist/jquery.min.js"></script>
-<script src="../bower_components/foundation-sites/dist/foundation.min.js"></script>
+<!--<script src="../bower_components/jquery/dist/jquery.min.js"></script>-->
+<!--<script src="../bower_components/foundation-sites/dist/foundation.min.js"></script>-->
 
+<script src="../bower_components/lodash/lodash.min.js"></script>
 <script src="../scripts/test.js"></script>
 </body>
 </html>
