--- a/app/templates/client/htmls/test.html
+++ b/app/templates/client/htmls/test.html
@@ -41,6 +41,7 @@
 <!--<script src="../bower_components/foundation-sites/dist/foundation.min.js"></script>-->
 
 <script src="../bower_components/lodash/lodash.min.js"></script>
+<script src="../bower_components/moment/min/moment.min.js"></script>
 <script src="../scripts/test.js"></script>
 </body>
 </html>
