--- a/app/templates/client/htmls/test.html
+++ b/app/templates/client/htmls/test.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Test</title>
+    <meta charset="utf-8">
+    <meta name="author" content="huyaxiong">
+    <meta name="description" content="calendar">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <!--<link rel="icon" href="../images/x.jpg" type="image/jpeg">-->
+    <!--<link rel="shortcut icon" href="../images/x.jpg" type="image/jpeg">-->
     <link rel="stylesheet" href="../stylesheets/test.css">
 </head>
 <body>
