--- a/hs/templates/template.html
+++ b/hs/templates/template.html
@@ -17,14 +17,6 @@
 
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/foundation-sites/dist/foundation.min.js"></script>
-<script src="../bower_components/lodash/lodash.min.js"></script>
-<script src="../bower_components/moment/min/moment.min.js"></script>
-<script src="../bower_components/EaselJS/lib/easeljs-0.8.2.min.js"></script>
-<script src="../bower_components/TweenJS/lib/tweenjs-0.6.2.min.js"></script>
-<script src="../bower_components/PreloadJS/lib/preloadjs-0.6.2.min.js"></script>
-<script src="../bower_components/SoundJS/lib/soundjs-0.6.2.min.js"></script>
-<script src="../bower_components/gsap/src/minified/TweenLite.min.js"></script>
-<script src="../bower_components/gsap/src/minified/TimelineLite.min.js"></script>
-<script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
+<!--<script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>-->
 </body>
 </html>
