--- a/hs/templates/template.html
+++ b/hs/templates/template.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="author" content="huyaxiong">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <!--<link rel="icon" href="../images/x.jpg" type="image/jpeg">-->
     <!--<link rel="shortcut icon" href="../images/x.jpg" type="image/jpeg">-->
