--- a/hs/templates/template.scss
+++ b/hs/templates/template.scss
@@ -33,23 +33,37 @@
 //@include foundation-top-bar;
 //@include foundation-visibility-classes;
 //@include foundation-float-classes;
-@import "susy";
-@import "settings";
-
-$susy: (
-        global-box-sizing: border-box,
-        gutters: 0,
-        columns: 8,
-        output:isolate,
-        container:$large-breakpoint,
-        use-custom: (
-                background-options: true,
-                breakpoint:false
-        )
-);
-
-@include border-box-sizing;
-
+//
+//@import "susy";
+//@import "settings";
+//
+//$susy: (
+//        global-box-sizing: border-box,
+//        gutters: 0,
+//        columns: 8,
+//        output:isolate,
+//        container:$large-breakpoint,
+//        use-custom: (
+//                background-options: true,
+//                breakpoint:false
+//        )
+//);
+//
 //.row {
 //  @include container;
 //}
+
+html {
+  font-family: sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  height: 100%;
+}
+
+body {
+  margin: 0;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
