--- a/h/templates/template.html
+++ b/h/templates/template.html
@@ -9,13 +9,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <!--<link rel="icon" href="../images/x.jpg" type="image/jpeg">-->
     <!--<link rel="shortcut icon" href="../images/x.jpg" type="image/jpeg">-->
-    <link rel="stylesheet" href="../stylesheets/<%= name %>.css">
+    <!--<link rel="stylesheet" href="../stylesheets/<%= name %>.css">-->
 </head>
 <body>
 
 
 
-<script src="../bower_components/jquery/dist/jquery.min.js"></script>
-<script src="../bower_components/foundation-sites/dist/foundation.min.js"></script>
+<!--<script src="../bower_components/jquery/dist/jquery.min.js"></script>-->
 </body>
 </html>
