--- a/app/templates/client/scss/_settings.scss
+++ b/app/templates/client/scss/_settings.scss
@@ -38,3 +38,58 @@
 //        "#{$screen} and (min-resolution: 192dpi)",
 //        "#{$screen} and (min-resolution: 2dppx)"
 //);
+
+//@import 'foundation';
+//@include foundation-typography;
+//@include foundation-forms;
+//@include foundation-button;
+//@include foundation-accordion;
+//@include foundation-accordion-menu;
+//@include foundation-badge;
+//@include foundation-breadcrumbs;
+//@include foundation-button-group;
+//@include foundation-callout;
+//@include foundation-close-button;
+//@include foundation-menu;
+//@include foundation-menu-icon;
+//@include foundation-drilldown-menu;
+//@include foundation-dropdown;
+//@include foundation-dropdown-menu;
+//@include foundation-flex-video;
+//@include foundation-label;
+//@include foundation-media-object;
+//@include foundation-off-canvas;
+//@include foundation-orbit;
+//@include foundation-pagination;
+//@include foundation-progress-bar;
+//@include foundation-slider;
+//@include foundation-sticky;
+//@include foundation-reveal;
+//@include foundation-switch;
+//@include foundation-table;
+//@include foundation-tabs;
+//@include foundation-thumbnail;
+//@include foundation-title-bar;
+//@include foundation-tooltip;
+//@include foundation-top-bar;
+//@include foundation-visibility-classes;
+//@include foundation-float-classes;
+//
+//@import "susy";
+//@import "settings";
+//
+//$susy: (
+//        global-box-sizing: border-box,
+//        gutters: 0,
+//        columns: 8,
+//        output:isolate,
+//        container:$large-breakpoint,
+//        use-custom: (
+//                background-options: true,
+//                breakpoint:false
+//        )
+//);
+//
+//.row {
+//  @include container;
+//}
