--- a/h/templates/template.html
+++ b/h/templates/template.html
@@ -7,14 +7,13 @@
     <meta name="description" content="">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <!--<link rel="icon" href="../images/x.jpg" type="image/jpeg">-->
-    <!--<link rel="shortcut icon" href="../images/x.jpg" type="image/jpeg">-->
-    <!--<link rel="stylesheet" href="../stylesheets/<%= name %>.css">-->
+    <!--<link rel="stylesheet" href="../stylesheet/<%= name %>.css">-->
 </head>
 <body>
 
 
 
 <!--<script src="../bower_components/jquery/dist/jquery.min.js"></script>-->
+<!--<script src="../script/<%= name %>.js"></script>-->
 </body>
 </html>
