--- a/h/templates/template.html
+++ b/h/templates/template.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <title><%= name %></title>
     <meta charset="utf-8">
     <meta name="author" content="huyaxiong">
     <meta name="description" content="">
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <!--<link rel="stylesheet" href="../stylesheet/<%= name %>.css">-->
 </head>
@@ -13,7 +13,6 @@
 
 
 
-<!--<script src="../bower_components/jquery/dist/jquery.min.js"></script>-->
 <!--<script src="../script/<%= name %>.js"></script>-->
 </body>
 </html>
