--- a/app/templates/client/scss/_settings.scss
+++ b/app/templates/client/scss/_settings.scss
@@ -1,95 +1,1 @@
-//// Media Query Ranges
-//$small-breakpoint:  em-calc(640)  !default;
-//$medium-breakpoint: em-calc(1024) !default;
-//$large-breakpoint:  em-calc(1440) !default;
-//$xlarge-breakpoint: em-calc(1920) !default;
-//
-//$small-range:   (0, $small-breakpoint) !default;
-//$medium-range:  ($small-breakpoint  + em-calc(1), $medium-breakpoint) !default;
-//$large-range:   ($medium-breakpoint + em-calc(1), $large-breakpoint)  !default;
-//$xlarge-range:  ($large-breakpoint  + em-calc(1), $xlarge-breakpoint) !default;
-//$xxlarge-range: ($xlarge-breakpoint + em-calc(1), em-calc(99999999)) !default;
-//
-//$screen: "only screen" !default;
-//
-//$landscape: "#{$screen} and (orientation: landscape)" !default;
-//$portrait: "#{$screen} and (orientation: portrait)" !default;
-//
-//$small-up: $screen !default;
-//$small-only: "#{$screen} and (max-width: #{upper-bound($small-range)})" !default;
-//
-//$medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})" !default;
-//$medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})" !default;
-//
-//$large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})" !default;
-//$large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})" !default;
-//
-//$xlarge-up: "#{$screen} and (min-width:#{lower-bound($xlarge-range)})" !default;
-//$xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})" !default;
-//
-//$xxlarge-up: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})" !default;
-//$xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (max-width:#{upper-bound($xxlarge-range)})" !default;
-//
-//$retina: (
-//        "#{$screen} and (-webkit-min-device-pixel-ratio: 2)",
-//        "#{$screen} and (min--moz-device-pixel-ratio: 2)",
-//        "#{$screen} and (-o-min-device-pixel-ratio: 2/1)",
-//        "#{$screen} and (min-device-pixel-ratio: 2)",
-//        "#{$screen} and (min-resolution: 192dpi)",
-//        "#{$screen} and (min-resolution: 2dppx)"
-//);
-
-//@import 'foundation';
-//@include foundation-typography;
-//@include foundation-forms;
-//@include foundation-button;
-//@include foundation-accordion;
-//@include foundation-accordion-menu;
-//@include foundation-badge;
-//@include foundation-breadcrumbs;
-//@include foundation-button-group;
-//@include foundation-callout;
-//@include foundation-close-button;
-//@include foundation-menu;
-//@include foundation-menu-icon;
-//@include foundation-drilldown-menu;
-//@include foundation-dropdown;
-//@include foundation-dropdown-menu;
-//@include foundation-flex-video;
-//@include foundation-label;
-//@include foundation-media-object;
-//@include foundation-off-canvas;
-//@include foundation-orbit;
-//@include foundation-pagination;
-//@include foundation-progress-bar;
-//@include foundation-slider;
-//@include foundation-sticky;
-//@include foundation-reveal;
-//@include foundation-switch;
-//@include foundation-table;
-//@include foundation-tabs;
-//@include foundation-thumbnail;
-//@include foundation-title-bar;
-//@include foundation-tooltip;
-//@include foundation-top-bar;
-//@include foundation-visibility-classes;
-//@include foundation-float-classes;
-//
-//@import "susy";
-//@import "settings";
-//
-//$susy: (
-//        global-box-sizing: border-box,
-//        gutters: 0,
-//        columns: 8,
-//        output:isolate,
-//        container:$large-breakpoint,
-//        use-custom: (
-//                background-options: true,
-//                breakpoint:false
-//        )
-//);
-//
-//.row {
-//  @include container;
-//}
+@import "breakpoint";
