--- a/h/templates/template.html
+++ b/h/templates/template.html
@@ -3,7 +3,7 @@
 <head>
     <title><%= name %></title>
     <meta charset="utf-8">
-    <meta name="author" content="huyaxiong">
+    <meta name="author" content="hugh">
     <meta name="description" content="">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
