--- a/h/templates/template.html
+++ b/h/templates/template.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <link rel="stylesheet" href="stylesheet/normalize.css">
     <!--<link rel="stylesheet" href="../stylesheet/<%= name %>.css">-->
 </head>
 <body>
