--- a/app/templates/client/index.html
+++ b/app/templates/client/index.html
@@ -5,13 +5,12 @@
     <meta charset="utf-8">
     <meta name="author" content="hugh">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <link rel="stylesheet" href="stylesheet/normalize.css">
     <!--<link rel="stylesheet" href="stylesheet/app.css">-->
 </head>
 <body>
-
 
 
 <!--<script src="script/app.js"></script>-->
