--- a/app/templates/client/index.html
+++ b/app/templates/client/index.html
@@ -7,12 +7,12 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <link rel="stylesheet" href="stylesheet/normalize.css">
-    <!--<link rel="stylesheet" href="stylesheet/app.css">-->
+    <link rel="stylesheet" href="dist/normalize.css">
+    <!--<link rel="stylesheet" href="dist/app.css">-->
 </head>
 <body>
 
 
-<!--<script src="script/app.js"></script>-->
+<!--<script src="dist/app.js"></script>-->
 </body>
 </html>
