--- a/app/templates/scss/app.scss
+++ b/app/templates/scss/app.scss
@@ -6,4 +6,8 @@ body {
   background-color: $ghost;
   max-width: $large-breakpoint;
   margin: auto;
+
+  //@include susy-breakpoint($mobile, $susy-mobile) {
+  //
+  //}
 }
