--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -12,7 +12,7 @@
         margin: auto;
         height: 100%;
         background-color: #9adbed;
-        background-image: url("image/404.jpg");
+        background-image: url("images/404.jpg");
         background-repeat: no-repeat;
         background-position: center center;
         background-size: contain;
