--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,4 @@
-<html lang=en>
+<html lang="en">
 <!--<html lang="zh-cmn-Hans">-->
 <head>
     <title></title>
@@ -7,10 +7,9 @@
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=0.5">
     <meta name="robots" content="index, nofollow">
     <meta name="url" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Hugh">
     <meta name="subject" content="">
     <meta name="description" content="">
-    <link rel="stylesheet" href="dist/normalize.css">
     <!--<link rel="stylesheet" href="dist/app.css">-->
 </head>
 <body>
