--- a/app/templates/scss/_framework.scss
+++ b/app/templates/scss/_framework.scss
@@ -1,7 +1,2 @@
-<<<<<<< HEAD
-@import "settings";
-=======
-@import "susy";
-@import "font-awesome";
->>>>>>> b1f75eb66f5ce5b3e2fe5ca11cac0a7004c292ab
+//@import "susy";
 
