--- a/app/templates/scss/_framework.scss
+++ b/app/templates/scss/_framework.scss
@@ -1,2 +1,5 @@
-//@import "susy";
+//@import "_settings";
+//@import "~normalize.css/normalize.css";
+//@import "~susy/sass/susy";
+//@import "~font-awesome/scss/font-awesome.scss";
 
