--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Hugh">
     <meta name="subject" content="">
     <meta name="description" content="">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
     <!--<link rel="stylesheet" href="dist/app.css">-->
 </head>
 <body>
