--- a/app/templates/scss/settings.scss
+++ b/app/templates/scss/settings.scss
@@ -37,7 +37,4 @@ $mobile: "only screen and (max-width:#{map-get($breakpoints, 'medium')})";
 //  src: url("../fonts/ArchitectsDaughter.ttf");
 //}
 
-ul {
-  list-style: none;
-  margin: 0;
-}
+`
