--- a/vue/templates/src/app.scss
+++ b/vue/templates/src/app.scss
@@ -2,12 +2,19 @@
 
 
 #app {
-  background-color: #EFEFF4;
   height: 100%;
-  width: 100%;
-  color: rgb(51, 51, 51);
-  display: inline-block;
   font-family: "Heiti SC", "Helvetica";
 }
+
+.slide-enter-active {
+  transition: all .3s ease;
+}
+.slide-leave-active {
+  transition: all .3s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+.slide-enter, .slide-leave-to {
+  transform: translateX(-100%);
+}
+
 
 
