--- a/vue/templates/src/common/utils.scss
+++ b/vue/templates/src/common/utils.scss
@@ -15,3 +15,19 @@
   display: flex;
   align-items:center;
 }
+
+@mixin flex-center{
+  display: flex;
+  align-items:center;
+  justify-content: center;
+}
+
+@mixin overlay {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  overflow: hidden;
+}
