--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <head>
     <title></title>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=0.5">
     <meta name="robots" content="index, nofollow">
     <meta name="url" content="">
@@ -15,6 +15,6 @@
 <body>
 
 
-<!--<script src="dist/app.js"></script>-->
+<!--<script src="/dist/app.js"></script>-->
 </body>
 </html>
