--- a/app/templates/scss/main.scss
+++ b/app/templates/scss/main.scss
@@ -3,6 +3,7 @@
 
 
 body {
+  font-family: -apple-system, BlinkMacSystemFont, "PingFang SC", "Helvetica Neue", STHeiti, "Microsoft Yahei", Tahoma, Simsun, sans-serif;
   height: 100%;
 
   //@include susy-breakpoint($mobile, $susy-mobile) {
