--- a/app/templates/src/common/reset.scss
+++ b/app/templates/src/common/reset.scss
@@ -2,9 +2,9 @@
   box-sizing: border-box;
 }
 
-html{
-  line-height: 1; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+html {
+  line-height: 1;
+  -webkit-text-size-adjust: 100%;
   height:100%;
 }
 
@@ -12,6 +12,7 @@ body {
   margin: 0;
   position: relative;
   height: 100%;
+  font-family: "Heiti SC", "Helvetica";
 }
 
 ul {
