--- a/app/templates/scss/reset.scss
+++ b/app/templates/scss/reset.scss
@@ -5,14 +5,14 @@
 html {
   line-height: 1;
   -webkit-text-size-adjust: 100%;
-  height:100%;
+  height: 100%;
 }
 
 body {
   margin: 0;
   position: relative;
   height: 100%;
-  font-family: "Heiti SC", "Helvetica";
+  font-family: "Heiti SC", "Helvetica", sans-serif;
 }
 
 ul {
@@ -51,5 +51,9 @@ p {
 }
 
 dl, dt, dd {
+  margin: 0;
+}
+
+form {
   margin: 0;
 }
