--- a/app/templates/scss/reset.scss
+++ b/app/templates/scss/reset.scss
@@ -12,7 +12,7 @@ body {
   margin: 0;
   position: relative;
   height: 100%;
-  font-family: "Heiti SC", "Microsoft YaHei", "Helvetica", sans-serif;
+  font-family: "Helvetica", sans-serif;
 }
 
 ul {
