--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title></title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=0.5">
+    <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=0.5,maximum-scale=0.5">
     <meta name="robots" content="index, nofollow">
     <meta name="url" content="">
     <meta name="author" content="Hugh">
